--- a/CleaningData.ipynb
+++ b/CleaningData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41d331b3",
+   "id": "e554575c",
    "metadata": {},
    "source": [
     "## we can deal with data values that are incomplete"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b8630f27",
+   "id": "d5660ac9",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7c440f8e",
+   "id": "1e103b9f",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "31d142e9",
+   "id": "987bcf66",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfdb5766",
+   "id": "115af6bf",
    "metadata": {},
    "source": [
     "### Strategies for dealing with missing data"
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "050e297d",
+   "id": "3f487f00",
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +221,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "d76b0af5",
+   "execution_count": 36,
+   "id": "08405bf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.387291</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.710327</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.347500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.823658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-2.588114</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.057494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.132214</td>\n",
+       "      <td>0.790627</td>\n",
+       "      <td>-0.922519</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2\n",
+       "0  0.387291       NaN       NaN\n",
+       "1  0.710327       NaN       NaN\n",
+       "2 -1.347500       NaN  0.823658\n",
+       "3 -2.588114       NaN  0.057494\n",
+       "4  0.132214  0.790627 -0.922519"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can inject some NaN values to work with\n",
+    "df.iloc[:4,1] = np.nan # row 0, 1, 2, 3 in column 1\n",
+    "df.iloc[:2,2] = np.nan # row 0, 1 in column 2\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "38f41e5e",
    "metadata": {},
    "outputs": [
     {
@@ -330,30 +418,150 @@
        "9 -0.065887  0.368034 -0.156443"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# we can inject some NaN values to work with\n",
-    "df.iloc[:4,1] = np.nan # row 0, 1, 2, 3 in column 1\n",
-    "df.iloc[:2,2] = np.nan # row 0, 1 in column 2\n",
+    "# there are several ways to solve this\n",
+    "df.fillna(0) # non-persistent\n",
+    "df.fillna(method='ffill', axis=1) # forward fill (in this case across the rows)\n",
+    "df.fillna({1:0.5, 2:0.8}) # inject specific values per column\n",
+    "df.dropna(thresh=2) # only drop a row if there are TWO NaN values\n",
+    "df.fillna(method='ffill', axis=1, limit=1) # fill up to one NaN per row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a7edb8f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.387291</td>\n",
+       "      <td>0.038847</td>\n",
+       "      <td>0.038847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.710327</td>\n",
+       "      <td>0.038847</td>\n",
+       "      <td>0.038847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.347500</td>\n",
+       "      <td>0.038847</td>\n",
+       "      <td>0.823658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-2.588114</td>\n",
+       "      <td>0.038847</td>\n",
+       "      <td>0.057494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.132214</td>\n",
+       "      <td>0.790627</td>\n",
+       "      <td>-0.922519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.680132</td>\n",
+       "      <td>-0.096506</td>\n",
+       "      <td>0.056333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.189512</td>\n",
+       "      <td>-0.771980</td>\n",
+       "      <td>-0.074373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-0.747060</td>\n",
+       "      <td>0.673265</td>\n",
+       "      <td>2.085774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.822100</td>\n",
+       "      <td>-0.730361</td>\n",
+       "      <td>1.154560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-0.065887</td>\n",
+       "      <td>0.368034</td>\n",
+       "      <td>-0.156443</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2\n",
+       "0  0.387291  0.038847  0.038847\n",
+       "1  0.710327  0.038847  0.038847\n",
+       "2 -1.347500  0.038847  0.823658\n",
+       "3 -2.588114  0.038847  0.057494\n",
+       "4  0.132214  0.790627 -0.922519\n",
+       "5  0.680132 -0.096506  0.056333\n",
+       "6  0.189512 -0.771980 -0.074373\n",
+       "7 -0.747060  0.673265  2.085774\n",
+       "8  0.822100 -0.730361  1.154560\n",
+       "9 -0.065887  0.368034 -0.156443"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# in this case we will use the mean() to fill missing values\n",
+    "df.fillna(df.mean()) # fill each columns NaN with that columns mean value\n",
+    "# we can calculate a significant value and use that for all NaN replacements\n",
+    "c1_mean = df.iloc[:, 1].mean()\n",
+    "c1_mean\n",
+    "df.fillna(c1_mean, inplace=True) # careful - we lose the original data\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "146ae74c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61ecabb8",
+   "id": "459fc6e3",
    "metadata": {},
    "outputs": [],
    "source": []
