--- a/NumpyIntroduction.ipynb
+++ b/NumpyIntroduction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "396b50f8",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "82e19bf4",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        "array([3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "662ed1f9",
    "metadata": {},
    "outputs": [
@@ -52,10 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 46.9 ms\n",
-      "Wall time: 73.9 ms\n",
-      "CPU times: total: 125 ms\n",
-      "Wall time: 151 ms\n"
+      "Wall time: 99.5 ms\n",
+      "Wall time: 176 ms\n"
      ]
     }
    ],
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "b6a0ca7d",
    "metadata": {},
    "outputs": [
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "e754daa7",
    "metadata": {},
    "outputs": [
@@ -124,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "90d0f154",
    "metadata": {},
    "outputs": [
@@ -154,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "f4fcfd4c",
    "metadata": {},
    "outputs": [
@@ -177,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "a9c84e92",
    "metadata": {},
    "outputs": [
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "89015386",
    "metadata": {},
    "outputs": [
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "9447fd13",
    "metadata": {},
    "outputs": [
@@ -256,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "2dbc065c",
    "metadata": {},
    "outputs": [
@@ -281,7 +279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +293,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1ba86bfb0d21474993fd6d77c82f69f7a964c39bb8456c3ac94ce79ad4c97ff7"
+   }
   }
  },
  "nbformat": 4,
